deploy/base/angular-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-app
  namespace: k8sgateway
  labels:
    app.kubernetes.io/name: angular-app
    app.kubernetes.io/part-of: k8sgateway
spec:
  selector:
    app.kubernetes.io/name: angular-app
  ports:
    - name: http
      port: 8080
      targetPort: http
